--- a/Lab-1-2/app/src/main/res/layout/activity_main.xml
+++ b/Lab-1-2/app/src/main/res/layout/activity_main.xml
@@ -30,22 +30,29 @@
         android:layout_marginRight="20dp"
         android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="3"
-            android:text="@string/username"
-            android:textColor="#000000"
-            android:textSize="18sp" />
+        <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:ems="3"-->
+            <!--android:text="@string/username"-->
+            <!--android:textColor="#000000"-->
+            <!--android:textSize="18sp" />-->
 
-        <EditText
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/usernameLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/input_username"
-            android:imeOptions="actionNext"
-            android:inputType="text"
-            android:maxLines="1"
-            android:textSize="18sp" />
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/inputUsername"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/input_username"
+                android:imeOptions="actionNext"
+                android:inputType="text"
+                android:maxLines="1"
+                android:textSize="18sp" />
+        </android.support.design.widget.TextInputLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -56,26 +63,34 @@
         android:layout_marginTop="10dp"
         android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="3"
-            android:gravity="end"
-            android:text="@string/password"
-            android:textColor="#000000"
-            android:textSize="18sp" />
+        <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:ems="3"-->
+            <!--android:gravity="end"-->
+            <!--android:text="@string/password"-->
+            <!--android:textColor="#000000"-->
+            <!--android:textSize="18sp" />-->
 
-        <EditText
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/passwordLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/input_password"
-            android:imeOptions="actionDone"
-            android:inputType="textPassword"
-            android:maxLines="1"
-            android:textSize="18sp" />
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/inputPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/input_password"
+                android:imeOptions="actionDone"
+                android:inputType="textPassword"
+                android:maxLines="1"
+                android:textSize="18sp" />
+        </android.support.design.widget.TextInputLayout>
     </LinearLayout>
 
     <RadioGroup
+        android:id="@+id/select"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
