--- a/Lab-4/app/src/main/res/layout/list_item.xml
+++ b/Lab-4/app/src/main/res/layout/list_item.xml
@@ -2,16 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:padding="10sp">
 
     <ImageView
-        android:id="@+id/image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/item_image"
+        android:layout_width="64sp"
+        android:layout_height="64sp"
         android:src="@mipmap/apple" />
 
     <TextView
-        android:id="@+id/text"
+        android:id="@+id/item_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
