--- a/Lab-4/app/src/main/res/layout/dynamic_broadcast.xml
+++ b/Lab-4/app/src/main/res/layout/dynamic_broadcast.xml
@@ -8,7 +8,9 @@
     <EditText
         android:id="@+id/message"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:hint="Message" />
 
     <LinearLayout
         android:layout_width="match_parent"
