--- a/Lab-6/app/src/main/res/layout/activity_main.xml
+++ b/Lab-6/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,76 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.terrychan.lab_6.MainActivity">
 
-    <TextView
+    <ImageView
+        android:id="@+id/image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+        android:src="@mipmap/image" />
+
+    <TextView
+        android:id="@+id/musicStatus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/image"
+        android:layout_marginTop="60dp"
+        android:text="Playing"
+        android:textSize="12sp" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/musicStatus"
+        android:gravity="center_vertical"
+        android:weightSum="1">
+
+        <Chronometer
+            android:id="@+id/currentTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingEnd="5dp" />
+
+        <SeekBar
+            android:id="@+id/seekBar"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+        <Chronometer
+            android:id="@+id/totalTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingStart="5dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_marginTop="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/linearLayout"
+        android:gravity="center">
+
+        <Button
+            android:id="@+id/playBtn"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text="PLAY" />
+
+        <Button
+            android:id="@+id/stopBtn"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text="STOP" />
+
+        <Button
+            android:id="@+id/quitBtn"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text="QUIT" />
+    </LinearLayout>
 </RelativeLayout>
