--- a/Lab-6/app/src/main/res/layout/activity_main.xml
+++ b/Lab-6/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,8 @@
         android:layout_below="@+id/image"
         android:layout_marginTop="60dp"
         android:text="Playing"
-        android:textSize="12sp" />
+        android:textSize="12sp"
+        android:visibility="invisible" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -57,11 +58,11 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_marginTop="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/linearLayout"
+        android:layout_marginTop="16dp"
         android:gravity="center">
 
         <Button
