--- a/Lab-6/app/src/main/res/layout/activity_main.xml
+++ b/Lab-6/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         android:src="@mipmap/image" />
 
     <TextView
-        android:id="@+id/musicStatus"
+        android:id="@+id/musicState"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -34,7 +34,7 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/musicStatus"
+        android:layout_below="@+id/musicState"
         android:gravity="center_vertical"
         android:weightSum="1">
 
