--- a/Lab-7/app/src/main/res/layout/activity_file.xml
+++ b/Lab-7/app/src/main/res/layout/activity_file.xml
@@ -24,30 +24,36 @@
             android:layout_weight="1" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:weightSum="3">
 
             <Button
                 android:id="@+id/saveBtn"
-                android:text="SAVE"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" />
+                android:layout_marginLeft="10sp"
+                android:layout_marginRight="10sp"
+                android:layout_weight="1"
+                android:text="SAVE" />
 
             <Button
                 android:id="@+id/loadBtn"
-                android:text="LOAD"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" />
+                android:layout_marginLeft="10sp"
+                android:layout_marginRight="10sp"
+                android:layout_weight="1"
+                android:text="LOAD" />
 
             <Button
                 android:id="@+id/clearBtn"
-                android:text="CLEAR"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" />
+                android:layout_marginLeft="10sp"
+                android:layout_marginRight="10sp"
+                android:layout_weight="1"
+                android:text="CLEAR" />
         </LinearLayout>
     </LinearLayout>
 
