--- a/Lab-7/app/src/main/res/layout/activity_file.xml
+++ b/Lab-7/app/src/main/res/layout/activity_file.xml
@@ -19,8 +19,9 @@
 
         <EditText
             android:id="@+id/textInput"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:gravity="start"
             android:layout_weight="1" />
 
         <LinearLayout
