--- a/Lab-8/app/src/main/res/layout/activity_main.xml
+++ b/Lab-8/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:weightSum="1">
+        android:weightSum="1"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -62,6 +64,7 @@
             android:layout_height="wrap_content">
 
             <Button
+                android:id="@+id/add"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Add" />
