--- a/Lab-9/app/src/main/res/layout/activity_main.xml
+++ b/Lab-9/app/src/main/res/layout/activity_main.xml
@@ -16,16 +16,16 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="18dp"
         android:gravity="center"
-        android:text="Welcome to the Weather Search!"
-        android:textSize="18sp" />
+        android:text="Welcome to the Weather Search!" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="18dp"
+        android:layout_marginBottom="5dp"
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="City Name:" />
@@ -43,57 +43,44 @@
             android:text="Search" />
     </LinearLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="18dp"
-        android:orientation="horizontal">
+        android:layout_marginBottom="5dp">
 
         <TextView
             android:id="@+id/city"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="广州" />
+            android:layout_alignParentStart="true" />
 
         <TextView
             android:id="@+id/updateTime"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="end"
-            android:text="16:08:11更新" />
-    </LinearLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp">
+            android:layout_alignParentStart="true"
+            android:layout_below="@id/city" />
 
         <TextView
             android:id="@+id/temperature"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_marginStart="80dp"
-            android:text="29℃"
-            android:textSize="30sp" />
+            android:layout_marginStart="100dp" />
 
         <TextView
             android:id="@+id/low_high"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/temperature"
-            android:layout_marginStart="80dp"
-            android:text="19℃/28℃"
-            android:textSize="18sp" />
+            android:layout_marginStart="100dp" />
 
         <TextView
             android:id="@+id/humidity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_marginStart="200dp"
-            android:text="湿度：49%"
-            android:textSize="16sp" />
+            android:layout_marginStart="200dp" />
 
         <TextView
             android:id="@+id/airQuality"
@@ -101,9 +88,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_below="@id/humidity"
-            android:layout_marginStart="200dp"
-            android:text="空气质量：中"
-            android:textSize="16sp" />
+            android:layout_marginStart="200dp" />
 
         <TextView
             android:id="@+id/wind"
@@ -111,15 +96,12 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_below="@id/airQuality"
-            android:layout_marginStart="200dp"
-            android:text="西北风 1级"
-            android:textSize="16sp" />
+            android:layout_marginStart="200dp" />
     </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="18dp"
         android:orientation="vertical">
 
         <ListView
