--- a/Lab-9/app/src/main/res/layout/tips_item.xml
+++ b/Lab-9/app/src/main/res/layout/tips_item.xml
@@ -9,15 +9,12 @@
     <TextView
         android:layout_gravity="top"
         android:id="@+id/textView1"
-        android:textSize="18sp"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:text="紫外线指数" />
+        android:layout_height="match_parent" />
     <TextView
         android:layout_gravity="top"
         android:id="@+id/textView2"
         android:layout_marginStart="16dp"
-        android:text="少发，无明显降温，感冒机率较低"
         android:layout_width="wrap_content"
         android:layout_height="match_parent" />
 </LinearLayout>
